--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "beautifulsoup4>=4.13.3",
     "bs4>=0.0.2",
+    "requests>=2.32.5",
     "tqdm>=4.67.1",
 ]
